@@ -1,3 +1,8 @@
+2007-05-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/SOGo/SOGoObject.m: fail to build if libFoundation is
+	being used.
+
 2007-05-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* UI/Common/UIxObjectActions.m ([UIxObjectActions
